[project]
name = "SLH-DSA"
version = "0.1.0"
description = "The pure python impl of the slh-das algorithm(based on fips205)."
authors = [
    {name = "Colinxu2020", email = "colinxu2020@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
